--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -25,6 +25,7 @@ MarkupSafe==2.1.3
 platformdirs==4.1.0
 Pygments==2.17.2
 PyJWT==2.8.0
+pytz==2023.3.post1
 requests==2.31.0
 six==1.16.0
 SQLAlchemy==2.0.24
