--- a/backend/requirements copy.txt
+++ b/backend/requirements copy.txt
@@ -29,8 +29,8 @@ pytz==2023.3.post1
 requests==2.31.0
 six==1.16.0
 SQLAlchemy==2.0.24
-gunicorn
 sqlparse==0.4.4
+typing_extensions==4.9.0
 tzdata==2023.4
 urllib3==2.1.0
 virtualenv==20.25.0
